# etg

./: Cargo.toml  README.md
etg/: Cargo.toml
etg/files/: guns.v1.ron  items.csv  syn1.csv  syn2.csv  synergies.v2.json  synergies.v3.json
etg/src/: equipable.rs  gun.rs  item.rs  lib.rs  synergy.rs
etg_derive/: Cargo.toml
etg_derive/src/: lib.rs
etg_derive/tests/: test.rs
etg_derive/tests/cases/: 01_happy_path.rs  02_fail_for_struct.rs  02_fail_for_struct.stderr  03_mandatory_serde_rename.rs  03_mandatory_serde_rename.stderr  04_fail_on_tuple_variant.rs  04_fail_on_tuple_variant.stderr  05_fail_on_struct_variant.rs  05_fail_on_struct_variant.stderr
files/: guns.csv  guns.min.v1.ron  items.csv  items.min.v1.ron  items.v1.ron  synergies.v1.json  synergies.v2.json  tiers.csv
src/: equipable.rs  gun.rs  item.rs  main.rs  synergy.rs
