[package]
name = "etg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
reqwest = { version = "0.11.13", features = ["blocking"] }
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
tl = "0.7.7"

[[bin]]
name = "get_guns"
path = "bin/get_guns.rs"

[[bin]]
name = "get_gun_tiers"
path = "bin/get_gun_tiers.rs"

[[bin]]
name = "get_items"
path = "bin/get_items.rs"

[[bin]]
name = "get_item_tiers"
path = "bin/get_item_tiers.rs"

[[bin]]
name = "get_synergies"
path = "bin/get_synergies.rs"
